--- a/index.html
+++ b/index.html
@@ -5,8 +5,60 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="icon" href="icon.png" />
 	<link rel="stylesheet" href="main.css" />
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="main.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-firestore.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.7/firebaseui.js"></script>
+	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.7/firebaseui.css" />
+	<script>
+		// Check browser support
+		if (typeof(Storage) !== "undefined") {
+			// Initialize Firebase
+			var config = {
+				apiKey: "AIzaSyAH5O7gLVIceyVBvT6dghshQlTlwdKE5zM",
+				authDomain: "schedules-71144.firebaseapp.com",
+				databaseURL: "https://schedules-71144.firebaseio.com",
+				projectId: "schedules-71144",
+				storageBucket: "schedules-71144.appspot.com",
+				messagingSenderId: "506410503928"
+			};
+			firebase.initializeApp(config);
+			// Initialize Cloud Firestore through Firebase
+			var db = firebase.firestore();
+			// Disable deprecated features
+			db.settings({
+			  timestampsInSnapshots: true
+			});
+			db.collection("students").get().then((querySnapshot) => {
+				var data = {};
+				querySnapshot.forEach((doc) => {
+					data[doc.id] = doc.data();
+				});
+				localStorage.setItem("students", JSON.stringify(data));
+			});
+			// Retrieve
+			localStorage.getItem("students");
+			var provider = new firebase.auth.GoogleAuthProvider();
+			firebase.auth().signInWithPopup(provider).then(function(result) {
+			  // This gives you a Google Access Token. You can use it to access the Google API.
+			  var token = result.credential.accessToken;
+			  // The signed-in user info.
+			  var user = result.user;
+			  alert(user.email);
+			  // ...
+			}).catch(function(error) {
+				alert(error);
+			  // Handle Errors here.
+			  var errorCode = error.code;
+			  var errorMessage = error.message;
+			  // The email of the user's account used.
+			  var email = error.email;
+			  // The firebase.auth.AuthCredential type that was used.
+			  var credential = error.credential;
+			  // ...
+			});
+		}
+    </script>
+	<!--script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script-->
 	<title>Study Group Schedules</title>
 </head>
 
@@ -103,6 +155,7 @@
 		</div>
 	</div>
 	</div>
+	<script src="main.js"></script>
 </body>
 
 </html>
