--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="main.css" />
 	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-firestore.js"></script>
-    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.7/firebaseui.js"></script>
+	<script src="https://cdn.firebase.com/libs/firebaseui/3.5.7/firebaseui.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.7/firebaseui.css" />
 	<script>
 		// Check browser support
@@ -37,25 +37,28 @@
 			});
 			// Retrieve
 			localStorage.getItem("students");
-			var provider = new firebase.auth.GoogleAuthProvider();
-			firebase.auth().signInWithPopup(provider).then(function(result) {
-			  // This gives you a Google Access Token. You can use it to access the Google API.
-			  var token = result.credential.accessToken;
-			  // The signed-in user info.
-			  var user = result.user;
-			  alert(user.email);
-			  // ...
-			}).catch(function(error) {
-				alert(error);
-			  // Handle Errors here.
-			  var errorCode = error.code;
-			  var errorMessage = error.message;
-			  // The email of the user's account used.
-			  var email = error.email;
-			  // The firebase.auth.AuthCredential type that was used.
-			  var credential = error.credential;
-			  // ...
-			});
+			if (localStorage.getItem("email") == null) {
+				var provider = new firebase.auth.GoogleAuthProvider();
+				firebase.auth().signInWithPopup(provider).then(function(result) {
+				  // This gives you a Google Access Token. You can use it to access the Google API.
+				  //var token = result.credential.accessToken;
+				  // The signed-in user info.
+				  //var user = result.user;
+				  localStorage.setItem("email", user.email);
+				  // ...
+				}).catch(function(error) {
+					alert(error);
+				  // Handle Errors here.
+				  var errorCode = error.code;
+				  var errorMessage = error.message;
+				  // The email of the user's account used.
+				  var email = error.email;
+				  // The firebase.auth.AuthCredential type that was used.
+				  var credential = error.credential;
+				  // ...
+				});
+			}
+			alert(localStorage.getItem("email");
 		}
     </script>
 	<!--script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script-->
