--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				  // ...
 				});
 			}
-			alert(localStorage.getItem("email");
+			alert(localStorage.getItem("email"));
 		}
     </script>
 	<!--script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script-->
