--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			});
 			// Retrieve
 			localStorage.getItem("students");
-			if (localStorage.getItem("email") == null) {
+			if (localStorage.getItem("email") !== null) {
 				var provider = new firebase.auth.GoogleAuthProvider();
 				firebase.auth().signInWithPopup(provider).then(function(result) {
 				  // This gives you a Google Access Token. You can use it to access the Google API.
